tests/test_assets/semantic/invalid/void_values/argument.cog
does_nothing::() -> void {
}

takes_i32::(x: i32) -> void {
}

test::() {
    takes_i32(does_nothing());
}