tests/test_assets/semantic/invalid/void_values/argument.expected
semantic error at line 8: expression does not produce a value
1 semantic error generated.
